Project creation continued