@@ -1,16 +1,28 @@
 package com.trbtree.service.modules.protfolio.service.impl;
 
 import com.trbtree.service.modules.protfolio.dto.ProjectResponse;
+import com.trbtree.service.modules.protfolio.entity.Project;
+import com.trbtree.service.modules.protfolio.mapper.ProjectMapper;
+import com.trbtree.service.modules.protfolio.repository.ProjectRepository;
 import com.trbtree.service.modules.protfolio.service.ProjectService;
 import lombok.AllArgsConstructor;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 @AllArgsConstructor
 public class ProjectServiceImpl implements ProjectService {
+    private final ProjectRepository projectRepository;
+    private final ProjectMapper projectMapper;
+
     @Override
     public List<ProjectResponse> getProject(UUID userId) {
-        return List.of();
+        return Optional.ofNullable(projectRepository.findByUserId())
+                .orElse(Collections.emptyList())
+                .stream()
+                .map(projectMapper::toDTO)
+                .toList();
     }
 }
